ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: divine-will-school-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "divine-will-school-ip"
    networking.gke.io/managed-certificates: "divine-will-school-cert"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: divine-will-school-service
            port: 
              number: 80
